[project]
name = "modelscope-kontext"
description = "This is a custom node for ComfyUI that allows users to perform Image-to-Image generation by calling the FLUX.1-Kontext-Dev model via the official ModelScope API."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["requests", "Pillow"]

[project.urls]
Repository = "https://github.com/Onionman61/ComfyUI-ModelScope-Kontext"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Onionman61/ComfyUI-ModelScope-Kontext/wiki"
"Bug Tracker" = "https://github.com/Onionman61/ComfyUI-ModelScope-Kontext/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-ModelScope-Kontext"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

